[gd_scene load_steps=3 format=2]

[ext_resource path="res://content/gui/menus/DialogOverlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="DialogOverlay" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 1024.0
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 384.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 364.0
custom_constants/separation = 8
alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="Background/Margin/VBox"]
margin_top = 10.0
margin_right = 728.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."

[node name="Answer3Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 118.0
margin_right = 728.0
margin_bottom = 166.0
rect_min_size = Vector2( 360, 48 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Answer 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 174.0
margin_right = 728.0
margin_bottom = 222.0
rect_min_size = Vector2( 360, 48 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Answer 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 230.0
margin_right = 728.0
margin_bottom = 278.0
rect_min_size = Vector2( 360, 48 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Answer 1"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer0Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 286.0
margin_right = 728.0
margin_bottom = 334.0
rect_min_size = Vector2( 360, 48 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Answer 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Margin/VBox/Answer3Button" to="." method="_on_Answer3Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/Answer2Button" to="." method="_on_Answer2Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/Answer1Button" to="." method="_on_Answer1Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/Answer0Button" to="." method="_on_Answer0Button_pressed"]
